# HomeTask3

./: AllocatorTest.cpp  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
Allocators/: Allocators.cpp  Allocators.h  CMakeLists.txt
Containers/: CMakeLists.txt  List.h
